remove one card

--- a/public/index.html
+++ b/public/index.html
@@ -51,31 +51,24 @@
             </div>
         </section>
         <section id="consultoria" class="bg-gradient-to-r from-darkblue via-[#071a33] to-[#12294a] text-white py-16 px-4">
-            <div class="max-w-6xl mx-auto">
-            <h2 class="text-3xl font-bold mb-10 text-center text-gold">Nossas Consultorias Financeiras</h2>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-                <!-- Card 1 -->
-                <div class="bg-[#16243a] rounded-lg shadow-lg p-8 flex flex-col items-center text-center border border-gold/30 hover:scale-105 transition">
-                <img src="https://images.unsplash.com/photo-1515168833906-d2a3b82b1e6e?auto=format&fit=crop&w=400&q=80" alt="Planejamento Financeiro" class="w-24 h-24 object-cover rounded-full mb-6 border-4 border-gold">
-                <h3 class="text-xl font-semibold mb-2 text-gold">Planejamento Financeiro</h3>
-                <p class="mb-4 text-gray-200">Organize suas finanças, defina metas e conquiste estabilidade com um plano personalizado.</p>
-                <a href="#cta" class="mt-auto inline-block bg-gold hover:bg-goldLight text-darkblue font-semibold px-6 py-2 rounded-full shadow transition">Saiba Mais</a>
+            <div class="max-w-4xl mx-auto"></div>
+                <h2 class="text-3xl font-bold mb-10 text-center text-gold">Nossas Consultorias Financeiras</h2>
+                <div class="flex flex-col md:flex-row justify-center items-center gap-8">
+                    <!-- Card 1 -->
+                    <div class="bg-[#16243a] rounded-lg shadow-lg p-8 flex flex-col items-center text-center border border-gold/30 hover:scale-105 transition w-full md:w-1/2 max-w-sm">
+                        <img src="https://images.unsplash.com/photo-1515168833906-d2a3b82b1e6e?auto=format&fit=crop&w=400&q=80" alt="Planejamento Financeiro" class="w-24 h-24 object-cover rounded-full mb-6 border-4 border-gold">
+                        <h3 class="text-xl font-semibold mb-2 text-gold">Planejamento Financeiro</h3>
+                        <p class="mb-4 text-gray-200">Organize suas finanças, defina metas e conquiste estabilidade com um plano personalizado.</p>
+                        <a href="#cta" class="mt-auto inline-block bg-gold hover:bg-goldLight text-darkblue font-semibold px-6 py-2 rounded-full shadow transition">Saiba Mais</a>
+                    </div>
+                    <!-- Card 2 -->
+                    <div class="bg-[#16243a] rounded-lg shadow-lg p-8 flex flex-col items-center text-center border border-gold/30 hover:scale-105 transition w-full md:w-1/2 max-w-sm">
+                        <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=400&q=80" alt="Investimentos Inteligentes" class="w-24 h-24 object-cover rounded-full mb-6 border-4 border-gold">
+                        <h3 class="text-xl font-semibold mb-2 text-gold">Investimentos Inteligentes</h3>
+                        <p class="mb-4 text-gray-200">Descubra as melhores oportunidades para fazer seu dinheiro render com segurança e estratégia.</p>
+                        <a href="#cta" class="mt-auto inline-block bg-gold hover:bg-goldLight text-darkblue font-semibold px-6 py-2 rounded-full shadow transition">Saiba Mais</a>
+                    </div>
                 </div>
-                <!-- Card 2 -->
-                <div class="bg-[#16243a] rounded-lg shadow-lg p-8 flex flex-col items-center text-center border border-gold/30 hover:scale-105 transition">
-                <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=400&q=80" alt="Investimentos Inteligentes" class="w-24 h-24 object-cover rounded-full mb-6 border-4 border-gold">
-                <h3 class="text-xl font-semibold mb-2 text-gold">Investimentos Inteligentes</h3>
-                <p class="mb-4 text-gray-200">Descubra as melhores oportunidades para fazer seu dinheiro render com segurança e estratégia.</p>
-                <a href="#cta" class="mt-auto inline-block bg-gold hover:bg-goldLight text-darkblue font-semibold px-6 py-2 rounded-full shadow transition">Saiba Mais</a>
-                </div>
-                <!-- Card 3 -->
-                <div class="bg-[#16243a] rounded-lg shadow-lg p-8 flex flex-col items-center text-center border border-gold/30 hover:scale-105 transition">
-                <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=400&q=80" alt="Educação Financeira" class="w-24 h-24 object-cover rounded-full mb-6 border-4 border-gold">
-                <h3 class="text-xl font-semibold mb-2 text-gold">Educação Financeira</h3>
-                <p class="mb-4 text-gray-200">Aprenda a lidar com dinheiro, evitar dívidas e construir um futuro financeiro sólido.</p>
-                <a href="#cta" class="mt-auto inline-block bg-gold hover:bg-goldLight text-darkblue font-semibold px-6 py-2 rounded-full shadow transition">Saiba Mais</a>
-                </div>
-            </div>
             </div>
         </section>
         <section id="testimonials" class="bg-gradient-to-r from-darkblue via-[#071a33] to-[#12294a] text-white py-16 px-4 text-center">
