--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,45 @@
         <h1 class="text-4xl md:text-6xl font-bold mb-4">Bem-vindo ao Nosso Produto</h1>
         <p class="text-lg md:text-2xl mb-8">Sua solução para <span class="italic">[descreva o problema que seu produto resolve]</span>.</p>
         <div class="flex justify-center mb-8">
-            <div class="w-full max-w-3xl aspect-video rounded-lg overflow-hidden shadow-lg border-4 border-white">
-            <iframe class="w-full h-full" src="https://www.youtube.com/embed/nNUvW2t5YxY?si=8Of1nwQbGQCBBw2n" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="relative w-full max-w-3xl aspect-video rounded-lg overflow-hidden shadow-lg border-4 border-white">
+                <iframe class="w-full h-full"
+                    src="https://www.youtube.com/embed/nNUvW2t5YxY?autoplay=1&mute=1&si=8Of1nwQbGQCBBw2n"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin"
+                    allowfullscreen>
+                </iframe>
             </div>
         </div>
+        <!-- Fullscreen Blocker Overlay -->
+        <div id="audio-warning-blocker" class="fixed inset-0 z-50 flex items-center justify-center bg-black/90">
+            <div class="bg-red-900 text-white px-6 py-4 rounded-lg shadow-lg text-lg font-semibold flex items-center gap-2 flex-col md:flex-row">
+                <div class="flex items-center gap-2 mb-4 md:mb-0">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M9 19V6l-2 2H5a2 2 0 00-2 2v4a2 2 0 002 2h2l2 2zm7-7a4 4 0 00-4-4m0 8a4 4 0 004-4m0 0V7m0 5v5"></path>
+                    </svg>
+                    Ative o áudio para uma melhor experiência!
+                </div>
+                <button id="close-audio-warning-blocker" class="bg-darkblue text-gold px-3 py-1 rounded hover:bg-goldDark hover:text-white transition">OK</button>
+            </div>
+        </div>
+        <script>
+            document.addEventListener('DOMContentLoaded', function () {
+                const blocker = document.getElementById('audio-warning-blocker');
+                const closeBtn = document.getElementById('close-audio-warning-blocker');
+                closeBtn.addEventListener('click', function () {
+                    blocker.style.display = 'none';
+                });
+                // Prevent scrolling while blocker is visible
+                document.body.style.overflow = 'hidden';
+                closeBtn.addEventListener('click', function () {
+                    document.body.style.overflow = '';
+                });
+            });
+        </script>
+    </div>
+
         <div class="w-full max-w-3xl mx-auto mt-4">
             <a href="#cta" class="block w-full bg-gold hover:bg-goldLight text-darkblue font-semibold px-8 py-3 rounded-full shadow transition text-center">Comece Agora</a>
         </div>
