--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
 </head>
 <body class="bg-darkblue text-white font-sans">
     <header class="bg-gradient-to-r from-darkblue via-[#071a33] to-[#12294a] text-white py-16 px-4 text-center">
-        <h1 class="text-4xl md:text-6xl font-bold mb-4">Bem-vindo ao Nosso Produto</h1>
-        <p class="text-lg md:text-2xl mb-8">Sua solução para <span class="italic">[descreva o problema que seu produto resolve]</span>.</p>
+        <h1 class="text-4xl md:text-4xl font-bold mb-4">Precisa de um plano de investimento personalizado para você?</h1>
+        <p class="text-lg md:text-2xl mb-8">Assista o video e desca a pagina para conhecer os beneficios!</p>
         <div class="flex justify-center mb-8">
             <div class="relative w-full max-w-3xl aspect-video rounded-lg overflow-hidden shadow-lg border-4 border-white">
                 <iframe class="w-full h-full"
@@ -95,7 +95,7 @@
                     A obsessão por enriquecer rápido gera frustração e perdas.
                 </p>
                 <p class="text-lg mb-4">
-                    Desde 1971, seu trabalho vale cada vez menos.
+                    A maioria dos investidores no Brasil não tem estratégia.
                 </p>
                 <p class="text-lg">
                     70% das fortunas se perdem em poucos anos por falta de gestão.
@@ -104,24 +104,49 @@
         </section>
         <section id="solucao" class="bg-gradient-to-r from-darkblue via-[#071a33] to-[#12294a] text-white py-16 px-4">
             <div class="max-w-3xl mx-auto text-center">
-                <h2 class="text-3xl font-bold mb-6 text-gold">A Solução</h2>
-                <ul class="mb-8 space-y-4 text-lg">
-                    <li>
-                        <span class="font-semibold text-gold">Plano de Investimentos Personalizado</span>
-                    </li>
-                    <li>
-                        <span class="font-semibold text-gold">Roteiro Financeiro Estratégico</span>
-                    </li>
-                    <li>
-                        <span class="font-semibold text-gold">Planejamento de Aposentadoria</span>
-                    </li>
-                    <li>
-                        <span class="font-semibold text-gold">Suporte individual com especialista</span>
-                    </li>
-                </ul>
-                <p class="text-lg">
-                    Sem dicas genéricas. Você terá um plano sob medida para seus objetivos.
+            <h2 class="text-3xl font-bold mb-6 text-gold">A Solução</h2>
+            <ul class="mb-8 space-y-4 text-lg">
+                <li>
+                <span class="font-semibold text-gold">Plano de Investimentos Personalizado</span>
+                </li>
+                <li>
+                <span class="font-semibold text-gold">Roteiro Financeiro Estratégico</span>
+                </li>
+                <li>
+                <span class="font-semibold text-gold">Planejamento de Aposentadoria</span>
+                </li>
+                <li>
+                <span class="font-semibold text-gold">Suporte individual com especialista</span>
+                </li>
+            </ul>
+            <p class="text-lg">
+                Sem dicas genéricas. Você terá um plano sob medida para seus objetivos.
+            </p>
+            </div>
+        </section>
+
+        <section id="compromisso" class="bg-gradient-to-r from-darkblue via-[#071a33] to-[#12294a] text-white py-16 px-4">
+            <div class="max-w-3xl mx-auto text-center">
+            <h2 class="text-3xl font-bold mb-6 text-gold">Nosso compromisso com você</h2>
+            <div class="mb-8 text-lg">
+                <p class="mb-4 p-20 text-2xl">
+                Serao 3 ou 5 reuniões onde faremos o passo a passo para identificar seus objetivos, montar sua estratégia e instruir a você como seguir.
                 </p>
+                <ul class="space-y-3 text-left max-w-xl mx-auto">
+                <li>
+                    <span class="font-semibold text-gold">1° Reunião</span> - Te conhecendo e me apresentando. Essencial para verificar suas necessidades.
+                </li>
+                <li>
+                    <span class="font-semibold text-gold">2° Reunião</span> - Apresentando a estratégia e como se guiar por ela. Entregaremos um PDF com sua estratégia e detalhes sobre os investimentos na carteira.
+                </li>
+                <li>
+                    <span class="font-semibold text-gold">3° Reunião</span> - Instruções extras, revisão e eventuais mudanças de acordo com suas demandas.
+                </li>
+                <li>
+                    <span class="font-semibold text-gold">+2 Reuniões extras no plano mentor</span> - Se você não sabe abrir conta em corretora ou comprar os ativos, estas reuniões servirão para fazer o passo a passo junto contigo e te ensinar a seguir por conta própria.
+                </li>
+                </ul>
+            </div>
             </div>
         </section>
 
