--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,8 @@
         <h1 class="text-3xl md:text-5xl font-bold mb-4">Precisa de um plano de investimento personalizado para você?</h1>
         <p class="text-base md:text-xl mb-8">Assista o vídeo e desça a página para conhecer os benefícios!</p>
         <div class="flex justify-center mb-8">
-            <div class="relative w-full max-w-3xl aspect-video rounded-lg overflow-hidden shadow-lg border-4 border-white">
-                <iframe class="w-full h-full"
+            <div class="relative w-full max-w-6xl aspect-video rounded-lg overflow-hidden shadow-lg border-4 border-white">
+                <iframe class="absolute inset-0 w-full h-full"
                     src="https://www.youtube.com/embed/nNUvW2t5YxY?autoplay=1&mute=1&si=8Of1nwQbGQCBBw2n"
                     title="YouTube video player"
                     frameborder="0"
@@ -36,7 +36,6 @@
                 </iframe>
             </div>
         </div>
-        
 
         <div class="w-full max-w-3xl mx-auto mt-4">
             <a href="#cta" class="block w-full bg-gold hover:bg-goldLight text-darkblue font-semibold px-8 py-3 rounded-full shadow transition text-center text-base md:text-lg">Comece Agora</a>
