--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Destino de Marketing</title>
+    <!-- Merriweather Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
         theme: {
           extend: {
+            fontFamily: {
+              serif: ['Merriweather', 'serif'],
+            },
             colors: {
               darkblue: '#000f1f',
               gold: '#ba9949',
@@ -21,7 +26,7 @@
     </script>
 </head>
 <body class="bg-darkblue text-white font-sans">
-    <header class="bg-gradient-to-r from-darkblue via-[#071a33] to-[#12294a] text-white py-16 px-4 text-center min-h-[101vh]">
+    <header class="bg-gradient-to-r from-darkblue via-[#071a33] to-[#12294a] text-white py-16 px-4 text-center min-h-[100vh]">
         <h1 class="text-3xl md:text-5xl font-bold mb-4">Precisa de um plano de investimento personalizado para você?</h1>
         <p class="text-base md:text-xl mb-8">Assista o vídeo e desça a página para conhecer os benefícios!</p>
         <div class="flex justify-center mb-8">
@@ -42,20 +47,23 @@
         </div>
     </header>
     <main>
-        <section id="features" class="bg-gradient-to-r from-darkblue via-[#071a33] to-[#12294a] text-white py-16 px-4">
-            <div class="max-w-5xl mx-auto flex flex-col md:flex-row items-center md:items-stretch gap-8">
-                <div class="flex-1 flex justify-center items-center mb-8 md:mb-0">
-                    <img src="./assets/9266ac7af5648fabd42ccf5a685523c1.jpeg" alt="Recursos do produto" class="rounded-lg shadow-lg w-full max-w-xs object-cover">
-                </div>
+
+        <section id="features" class="bg-gradient-to-r from-darkblue via-[#071a33] to-[#12294a] text-white py-16 px-4 min-h-[82vh] flex items-center">
+            <div class="max-w-5xl mx-auto flex flex-col md:flex-row items-center md:items-stretch gap-8 w-full">
                 <div class="flex-1 flex flex-col justify-center text-center md:text-left">
                     <h2 class="text-2xl md:text-3xl font-bold mb-6 text-gold">Construa Riqueza de Verdade.</h2>
-                    <p class="mb-8 text-base md:text-lg">
-                        Esqueça fórmulas mágicas, apostas e promessas vazias.
-                        Com estratégia e disciplina, você pode multiplicar seu patrimônio de forma sólida e duradoura.
-
-                        👉 Se você já consegue investir a partir de R$500/mês, clique em “Saiba Mais” e descubra seu plano de investimento personalizado.                   
-                    </p>
+                    <div class="mb-8 text-base md:text-lg space-y-4">
+                        <p>
+                            Esqueça fórmulas mágicas, apostas e promessas vazias. Com estratégia e disciplina, você pode multiplicar seu patrimônio de forma sólida e duradoura.
+                        </p>
+                        <p>
+                            Se você já consegue investir a partir de R$500/mês, clique em “Saiba Mais” e descubra seu plano de investimento personalizado.
+                        </p>
+                    </div>
                     <a href="#cta" class="inline-block bg-gold hover:bg-goldLight text-darkblue font-semibold px-8 py-3 rounded-full shadow transition text-base md:text-lg">Quero uma Consultoria</a>
+                </div>
+                <div class="flex-1 flex justify-center items-center">
+                    <img src="./assets/dcf_hero.jpg" alt="Recursos do produto" class="rounded-lg shadow-lg w-full max-w-xs object-cover">
                 </div>
             </div>
         </section>
