--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     </script>
 </head>
 <body class="bg-darkblue text-white font-sans">
-    <header class="bg-gradient-to-r from-darkblue via-[#071a33] to-[#12294a] text-white py-16 px-4 text-center min-h-[100vh]">
+    <header class="text-white py-16 px-4 text-center min-h-[100vh]">
         <h1 class="text-3xl md:text-5xl font-bold mb-4">Precisa de um plano de investimento personalizado para você?</h1>
         <p class="text-base md:text-xl mb-8">Assista o vídeo e desça a página para conhecer os benefícios!</p>
         <div class="flex justify-center mb-8">
@@ -48,7 +48,7 @@
     </header>
     <main>
 
-        <section id="features" class="bg-gradient-to-r from-darkblue via-[#071a33] to-[#12294a] text-white py-16 px-4 min-h-[82vh] flex items-center">
+        <section id="features" class="text-white py-16 px-4 min-h-[82vh] flex items-center">
             <div class="max-w-5xl mx-auto flex flex-col md:flex-row items-center md:items-stretch gap-8 w-full">
                 <div class="flex-1 flex flex-col justify-center text-center md:text-left">
                     <h2 class="text-2xl md:text-3xl font-bold mb-6 text-gold">Construa Riqueza de Verdade.</h2>
@@ -68,60 +68,50 @@
             </div>
         </section>
 
-        <section id="cadastro" class="bg-gradient-to-r from-darkblue via-[#071a33] to-[#12294a] text-white py-16 px-4">
-            <div class="max-w-3xl mx-auto rounded-lg shadow-lg bg-[#16243a]/80 p-8">
-                <h2 class="text-2xl md:text-3xl font-bold mb-6 text-gold text-center">Cadastre-se para sua Consultoria</h2>
-                <form class="space-y-6" autocomplete="off">
-                    <div>
-                        <label for="nome" class="block text-base md:text-lg font-semibold mb-2">Nome Completo</label>
-                        <input type="text" id="nome" name="nome" required class="w-full px-4 py-3 rounded-lg bg-[#1e3352] text-white border border-gold/30 focus:outline-none focus:border-gold transition text-base md:text-lg" placeholder="Seu nome">
-                    </div>
-                    <div>
-                        <label for="email" class="block text-base md:text-lg font-semibold mb-2">E-mail</label>
-                        <input type="email" id="email" name="email" required class="w-full px-4 py-3 rounded-lg bg-[#1e3352] text-white border border-gold/30 focus:outline-none focus:border-gold transition text-base md:text-lg" placeholder="seu@email.com">
-                    </div>
-                    <div>
-                        <label for="telefone" class="block text-base md:text-lg font-semibold mb-2">Telefone/WhatsApp</label>
-                        <input type="tel" id="telefone" name="telefone" required class="w-full px-4 py-3 rounded-lg bg-[#1e3352] text-white border border-gold/30 focus:outline-none focus:border-gold transition text-base md:text-lg" placeholder="(99) 99999-9999">
-                    </div>
-                    <div>
-                        <label for="objetivo" class="block text-base md:text-lg font-semibold mb-2">Qual seu principal objetivo financeiro?</label>
-                        <textarea id="objetivo" name="objetivo" rows="3" class="w-full px-4 py-3 rounded-lg bg-[#1e3352] text-white border border-gold/30 focus:outline-none focus:border-gold transition text-base md:text-lg" placeholder="Ex: Aposentadoria, comprar imóvel, independência financeira..."></textarea>
-                    </div>
-                    <button type="submit" class="w-full bg-gold hover:bg-goldLight text-darkblue font-bold py-3 rounded-full shadow-lg transition text-base md:text-lg">Enviar Cadastro</button>
-                </form>
-                <p class="mt-4 text-xs md:text-sm text-gray-400 text-center">Seus dados estão seguros. Não enviamos spam.</p>
-            </div>
-        </section>
-
-        <section id="autoridade" class="bg-gradient-to-r from-darkblue via-[#071a33] to-[#12294a] text-white py-16 px-4">
-            <div class="max-w-3xl mx-auto text-center">
-                <h2 class="text-2xl md:text-3xl font-bold mb-6 text-gold">Autoridade e Confiança</h2>
-                <ul class="mb-8 space-y-2 text-lg">
-                    <li>👨‍💼 8 anos em investimentos</li>
-                    <li>📊 7 anos em contabilidade</li>
-                    <li>🎓 Formação em Ciências Contábeis e Comércio Exterior</li>
-                    <li>✅ Certificação como Especialista em Investimentos</li>
-                </ul>
-                <div class="mt-8">
-                    <h3 class="text-2xl font-semibold mb-4 text-gold">Resultados reais:</h3>
-                    <div class="flex flex-col md:flex-row justify-center gap-8">
-                        <div class="bg-[#16243a] rounded-lg shadow-lg p-6 flex-1">
-                            <span class="block text-lg font-semibold text-gold mb-2">Cliente 1</span>
-                            <p class="text-xl font-bold mb-1">211,79% em 3 anos</p>
-                            <p class="text-gold">4,5x o CDI</p>
+        <section class="max-w-4xl mx-auto py-16 px-4">
+            <div class="bg-[#16243a]/80 rounded-lg shadow-lg flex flex-col md:flex-row items-stretch">
+                <!-- Encouragement Section -->
+                <div class="flex-1 flex flex-col justify-center p-8 border-b md:border-b-0 md:border-r border-[#22355a]">
+                    <h2 class="text-2xl md:text-3xl font-bold mb-4 text-gold text-center">Dê o Primeiro Passo!</h2>
+                    <p class="text-lg md:text-xl mb-6 text-white text-center">
+                        Preencha o formulário ao lado e garanta sua consultoria personalizada.<br>
+                        <span class="text-gold font-semibold">Vagas limitadas!</span> Não perca a chance de transformar seu futuro financeiro com orientação profissional e um plano sob medida para você.
+                    </p>
+                    <ul class="text-base md:text-lg text-gray-200 space-y-2 mx-auto max-w-xs">
+                        <li>✔️ Atendimento individual</li>
+                        <li>✔️ Estratégia exclusiva</li>
+                        <li>✔️ Suporte direto com especialista</li>
+                    </ul>
+                </div>
+                <!-- Cadastro Form Section -->
+                <div class="flex-1 flex flex-col justify-center p-8">
+                    <h2 class="text-2xl md:text-3xl font-bold mb-6 text-gold text-center">Cadastre-se para sua Consultoria</h2>
+                    <form class="space-y-6" autocomplete="off">
+                        <div>
+                            <label for="nome" class="block text-base md:text-lg font-semibold mb-2">Nome Completo</label>
+                            <input type="text" id="nome" name="nome" required class="w-full px-4 py-3 rounded-lg bg-[#1e3352] text-white border border-gold/30 focus:outline-none focus:border-gold transition text-base md:text-lg" placeholder="Seu nome">
                         </div>
-                        <div class="bg-[#16243a] rounded-lg shadow-lg p-6 flex-1">
-                            <span class="block text-lg font-semibold text-gold mb-2">Cliente 2</span>
-                            <p class="text-xl font-bold mb-1">19,88% em 1 ano</p>
-                            <p class="text-gold">173,77% do CDI</p>
+                        <div>
+                            <label for="email" class="block text-base md:text-lg font-semibold mb-2">E-mail</label>
+                            <input type="email" id="email" name="email" required class="w-full px-4 py-3 rounded-lg bg-[#1e3352] text-white border border-gold/30 focus:outline-none focus:border-gold transition text-base md:text-lg" placeholder="seu@email.com">
                         </div>
-                    </div>
+                        <div>
+                            <label for="telefone" class="block text-base md:text-lg font-semibold mb-2">Telefone/WhatsApp</label>
+                            <input type="tel" id="telefone" name="telefone" required class="w-full px-4 py-3 rounded-lg bg-[#1e3352] text-white border border-gold/30 focus:outline-none focus:border-gold transition text-base md:text-lg" placeholder="(99) 99999-9999">
+                        </div>
+                        <div>
+                            <label for="objetivo" class="block text-base md:text-lg font-semibold mb-2">Qual seu principal objetivo financeiro?</label>
+                            <textarea id="objetivo" name="objetivo" rows="3" class="w-full px-4 py-3 rounded-lg bg-[#1e3352] text-white border border-gold/30 focus:outline-none focus:border-gold transition text-base md:text-lg" placeholder="Ex: Aposentadoria, comprar imóvel, independência financeira..."></textarea>
+                        </div>
+                        <button type="submit" class="w-full bg-gold hover:bg-goldLight text-darkblue font-bold py-3 rounded-full shadow-lg transition text-base md:text-lg">Enviar Cadastro</button>
+                    </form>
+                    <p class="mt-4 text-xs md:text-sm text-gray-400 text-center">Seus dados estão seguros. Não enviamos spam.</p>
                 </div>
             </div>
         </section>
 
-        <section id="testimonials" class="bg-gradient-to-r from-darkblue via-[#071a33] to-[#12294a] text-white py-16 px-4 text-center">
+      
+        <section id="testimonials" class="text-white py-16 px-4 text-center">
             <h2 class="text-3xl font-bold mb-6 text-gold">O Que Nossos Clientes Dizem</h2>
             <div class="max-w-3xl mx-auto grid gap-8 md:grid-cols-3">
             <blockquote class="italic text-lg text-white border-l-4 border-gold pl-6">
@@ -200,6 +190,34 @@
             </div>
             </div>
         </section>
+
+          <section id="autoridade" class="text-white py-16 px-4">
+            <div class="max-w-3xl mx-auto text-center">
+                <h2 class="text-2xl md:text-3xl font-bold mb-6 text-gold">Autoridade e Confiança</h2>
+                <ul class="mb-8 space-y-2 text-lg">
+                    <li>👨‍💼 8 anos em investimentos</li>
+                    <li>📊 7 anos em contabilidade</li>
+                    <li>🎓 Formação em Ciências Contábeis e Comércio Exterior</li>
+                    <li>✅ Certificação como Especialista em Investimentos</li>
+                </ul>
+                <div class="mt-8">
+                    <h3 class="text-2xl font-semibold mb-4 text-gold">Resultados reais:</h3>
+                    <div class="flex flex-col md:flex-row justify-center gap-8">
+                        <div class="bg-[#16243a] rounded-lg shadow-lg p-6 flex-1">
+                            <span class="block text-lg font-semibold text-gold mb-2">Cliente 1</span>
+                            <p class="text-xl font-bold mb-1">211,79% em 3 anos</p>
+                            <p class="text-gold">4,5x o CDI</p>
+                        </div>
+                        <div class="bg-[#16243a] rounded-lg shadow-lg p-6 flex-1">
+                            <span class="block text-lg font-semibold text-gold mb-2">Cliente 2</span>
+                            <p class="text-xl font-bold mb-1">19,88% em 1 ano</p>
+                            <p class="text-gold">173,77% do CDI</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
 
         <section id="oportunidade" class="bg-gray-50 text-darkblue py-16 px-4">
             <div class="max-w-3xl mx-auto text-center">
