Add inages to the problem and solution sections

--- a/public/index.html
+++ b/public/index.html
@@ -129,42 +129,51 @@
             </div>
         </section>
 
-        <section id="problema" class="bg-gray-50 text-darkblue py-16 px-4">
-            <div class="max-w-3xl mx-auto text-center">
-                <h2 class="text-3xl font-bold mb-6 text-gold">O Problema</h2>
-                <p class="text-lg mb-4">
-                    A obsessão por enriquecer rápido gera frustração e perdas.
-                </p>
-                <p class="text-lg mb-4">
-                    A maioria dos investidores no Brasil não tem estratégia.
-                </p>
-                <p class="text-lg">
-                    70% das fortunas se perdem em poucos anos por falta de gestão.
-                </p>
-            </div>
-        </section>
-        <section id="solucao" class="bg-gray-50 text-darkblue py-16 px-4">
-            <div class="max-w-3xl mx-auto text-center">
-            <h2 class="text-3xl font-bold mb-6 text-gold">A Solução</h2>
-            <ul class="mb-8 space-y-4 text-lg">
-                <li>
-                <span class="font-semibold text-gold">Plano de Investimentos Personalizado</span>
-                </li>
-                <li>
-                <span class="font-semibold text-gold">Roteiro Financeiro Estratégico</span>
-                </li>
-                <li>
-                <span class="font-semibold text-gold">Planejamento de Aposentadoria</span>
-                </li>
-                <li>
-                <span class="font-semibold text-gold">Suporte individual com especialista</span>
-                </li>
-            </ul>
-            <p class="text-lg">
-                Sem dicas genéricas. Você terá um plano sob medida para seus objetivos.
-            </p>
-            </div>
-        </section>
+            <section id="problema" class="bg-white py-16 px-4 flex justify-center items-center">
+                <div class="max-w-3xl w-full">
+                    <div class="bg-gradient-to-br from-white via-white to-gray-100 mb-10 rounded-3xl border border-blue-900/30 p-10 md:p-14 flex flex-col items-center">
+                        <div class="flex flex-col md:flex-row items-center gap-8 w-full">
+                
+                            <!-- Right: Texts -->
+                            <div class="flex-1">
+                                <h2 class="text-3xl font-bold mb-6 text-darkblue">O Problema</h2>
+                                <p class="text-lg text-darkblue mb-4">
+                                   <span class="font-bold">A obsessão por enriquecer rápido leva muitos a frustrações e perdas financeiras.</span>
+                                   No Brasil, a maioria dos investidores não segue uma estratégia consistente e, por isso, 70% das
+                                   fortunas se dissipam em poucos anos por falta de gestão adequada.
+                                </p>
+                            </div>
+                             <!-- Left: Image -->
+                            <div class="flex-1 flex justify-center items-center mb-8 md:mb-0">
+                                <img src="./assets/losing money.png" alt="Problema financeiro" class="w-full max-w-xs object-cover">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bg-gradient-to-br from-white via-white to-gray-100 rounded-3xl border border-blue-900/30 p-10 md:p-14 flex flex-col items-center">
+                        <div class="flex flex-col md:flex-row items-center gap-8 w-full">
+                            <!-- Left: Image -->
+                            <div class="flex-1 flex justify-center items-center mb-8 md:mb-0">
+                                <img src="./assets/happy_chart.png" alt="Solução financeira" class="w-full max-w-xs object-cover">
+                            </div>
+                            <!-- Right: Texts -->
+                            <div class="flex-1">
+                                <h2 class="text-3xl font-bold mb-6 text-darkblue">A Solução</h2>
+                                <p class="text-lg text-darkblue mb-4">
+                                   Com um plano de investimentos personalizado, você recebe um roteiro financeiro
+                                    estratégico que inclui planejamento de aposentadoria e suporte individual com um especialista, 
+                                    garantindo clareza e segurança em cada decisão.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="w-full flex justify-center mt-10">
+                        <a href="#cta" class="inline-block bg-gold hover:bg-goldLight text-darkblue font-semibold px-8 py-3 rounded-full shadow transition text-base md:text-lg">
+                            Quero meu Plano Personalizado
+                        </a>
+                    </div>
+                </div>
+            </section>
+
 
         <section id="compromisso" class="bg-gray-50 text-darkblue py-16 px-4">
             <div class="max-w-3xl mx-auto text-center">
