--- a/public/index.html
+++ b/public/index.html
@@ -26,47 +26,72 @@
     </script>
 </head>
 <body class="bg-darkblue text-white font-sans">
-    <header class="text-white py-16 px-4 text-center min-h-[100vh]">
-        <h1 class="text-3xl md:text-5xl font-bold mb-4">Precisa de um plano de investimento personalizado para você?</h1>
-        <p class="text-base md:text-xl mb-8">Assista o vídeo e desça a página para conhecer os benefícios!</p>
-        <div class="flex justify-center mb-8">
-            <div class="relative w-full max-w-6xl aspect-video rounded-lg overflow-hidden shadow-lg border-4 border-white">
-                <iframe class="absolute inset-0 w-full h-full"
-                    src="https://www.youtube.com/embed/nNUvW2t5YxY?autoplay=1&mute=1&si=8Of1nwQbGQCBBw2n"
-                    title="YouTube video player"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    referrerpolicy="strict-origin-when-cross-origin"
-                    allowfullscreen>
-                </iframe>
-            </div>
-        </div>
+    <header class="bg-darkblue text-white py-16 px-4 text-center min-h-[100vh] flex flex-col justify-center">
 
-        <div class="w-full max-w-3xl mx-auto mt-4">
-            <a href="#cta" class="block w-full bg-gold hover:bg-goldLight text-darkblue font-semibold px-8 py-3 rounded-full shadow transition text-center text-base md:text-lg">Comece Agora</a>
-        </div>
-    </header>
+  <!-- Headline -->
+  <h1 class="text-4xl md:text-5xl font-extrabold mb-6 leading-snug md:leading-tight">
+    Precisa de um plano de investimento personalizado para você?
+  </h1>
+
+  <!-- Subheadline -->
+  <p class="text-base md:text-xl mb-10 text-gray-200">
+    Assista o vídeo e desça a página para conhecer os benefícios!
+  </p>
+
+  <!-- Video Container -->
+  <div class="flex justify-center mb-10">
+    <div class="relative w-full max-w-5xl aspect-video rounded-2xl overflow-hidden shadow-xl border-4 border-white hover:scale-[1.02] transition-transform duration-300">
+      <iframe class="absolute inset-0 w-full h-full rounded-2xl"
+        src="https://www.youtube.com/embed/nNUvW2t5YxY?autoplay=1&mute=1&si=8Of1nwQbGQCBBw2n"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen>
+      </iframe>
+    </div>
+  </div>
+
+  <!-- CTA Button -->
+  <div class="w-full max-w-sm mx-auto">
+    <a href="#cta" class="block w-full bg-gold hover:bg-goldLight text-darkblue font-bold px-8 py-4 rounded-full shadow-lg hover:scale-[1.02] transition-transform text-lg">
+      Comece Agora
+    </a>
+  </div>
+
+</header>
+
     <main>
 
-        <section id="features" class="text-white py-16 px-4 min-h-[82vh] flex items-center">
-            <div class="max-w-5xl mx-auto flex flex-col md:flex-row items-center md:items-stretch gap-8 w-full">
-                <div class="flex-1 flex flex-col justify-center text-center md:text-left">
-                    <h2 class="text-2xl md:text-3xl font-bold mb-6 text-gold">Construa Riqueza de Verdade.</h2>
-                    <div class="mb-8 text-base md:text-lg space-y-4">
-                        <p>
-                            Esqueça fórmulas mágicas, apostas e promessas vazias. Com estratégia e disciplina, você pode multiplicar seu patrimônio de forma sólida e duradoura.
-                        </p>
-                        <p>
-                            Se você já consegue investir a partir de R$500/mês, clique em “Saiba Mais” e descubra seu plano de investimento personalizado.
-                        </p>
-                    </div>
-                    <a href="#cta" class="inline-block bg-gold hover:bg-goldLight text-darkblue font-semibold px-8 py-3 rounded-full shadow transition text-base md:text-lg">Quero uma Consultoria</a>
-                </div>
-                <div class="flex-1 flex justify-center items-center">
-                    <img src="./assets/dcf_hero.jpg" alt="Recursos do produto" class="rounded-lg shadow-lg w-full max-w-xs object-cover">
-                </div>
-            </div>
-        </section>
+        <section id="features" class="bg-darkblue text-white py-20 px-6 min-h-[82vh] flex items-center">
+  <div class="max-w-6xl mx-auto flex flex-col md:flex-row items-center gap-12 w-full">
+    
+    <!-- Text Column -->
+    <div class="flex-1 flex flex-col justify-center text-center md:text-left">
+      <h2 class="text-3xl md:text-4xl font-extrabold mb-6 text-gold">
+        Construa Riqueza de Verdade
+      </h2>
+      <div class="mb-8 text-lg md:text-xl space-y-5 text-gray-200">
+        <p>
+          Esqueça fórmulas mágicas, apostas e promessas vazias. Com estratégia e disciplina, você pode multiplicar seu patrimônio de forma sólida e duradoura.
+        </p>
+        <p>
+          Se você já consegue investir a partir de R$500/mês, clique em “Saiba Mais” e descubra seu plano de investimento personalizado.
+        </p>
+      </div>
+      <a href="#cta" class="inline-block bg-gold hover:bg-goldLight text-darkblue font-bold px-8 py-4 rounded-full shadow-lg transition-transform hover:scale-[1.02] text-lg">
+        Quero uma Consultoria
+      </a>
+    </div>
+
+    <!-- Image Column -->
+    <div class="flex-1 flex justify-center items-center">
+      <img src="./assets/dcf_hero.jpg" alt="Recursos do produto" class="rounded-2xl shadow-2xl w-full max-w-sm md:max-w-md object-cover">
+    </div>
+
+  </div>
+</section>
+
 
         <section class="max-w-5xl mx-auto py-20 px-6">
   <div class="bg-gradient-to-br from-[#16243a]/90 to-[#0f1b2d]/90 rounded-2xl shadow-2xl flex flex-col md:flex-row items-stretch overflow-hidden">
